--- a/index.html
+++ b/index.html
@@ -8,56 +8,56 @@
 </head>
 <body>
     <header class="header">
-    <img src="/Final-Project/images/cloth-moth.jpg">
+    <img src="/images/cloth-moth.jpg">
     <h1 class="Cloth-moth">Cloth Moth</h1>
     </header>
 	<nav>
 	<ul>
 		<li>
             <a href="index.html">
-                <img src="/Final-Project/images/homepage.png" class="icon">
+                <img src="/images/homepage.png" class="icon">
             </a>
             <a href="index.html">Homepage</a>
         </li>
 
 		<li>
             <a href="about.html">
-                <img src="/Final-Project/images/about.png" class="icon">
+                <img src="/images/about.png" class="icon">
             </a>
             <a href="about.html">About</a>
         </li>
 
 		<li>
             <a href="tutorials.html">
-                <img src="/Final-Project/images/tutorials.png" class="icon">
+                <img src="/images/tutorials.png" class="icon">
             </a>
             <a href="tutorials.html">Tutorials</a>
         </li>
 
         <li>
             <a href="patterns.html">
-                <img src="/Final-Project/images/patterns.png" class="icon">
+                <img src="/images/patterns.png" class="icon">
             </a>
             <a href="patterns.html">Patterns</a>
         </li>
 
 		<li>
             <a href="forums.html">
-                <img src="/Final-Project/images/forums.png" class="icon">
+                <img src="/images/forums.png" class="icon">
             </a>
             <a href="forums.html">Forums</a>
         </li>
 
         <li>
             <a href="login.html">
-                <img src="/Final-Project/images/login.png" class="icon">
+                <img src="/images/login.png" class="icon">
             </a>
             <a href="login.html">Log In/Sign Up</a>
         </li>
 
 		<li>
             <a href="contact.html">
-                <img src="/Final-Project/images/contact.png" class="icon">
+                <img src="/images/contact.png" class="icon">
             </a>
             <a href="contact.html">Contact</a>
         </li>
@@ -65,30 +65,30 @@
 	</nav>
 
 <div class="sample">
-<a href="/Final-Project/tutorials.html">
+<a href="tutorials.html">
 <h2><i>Tutorials</i></h2>
 </a>
 
-<a href="/Final-Project/video-example.html">
+<a href="video-example.html">
 <h3>Top Tutorial Post Name:</h3>
 <p>This section would allow for users to see the beginning of top posts to hopefully inspire them to click on the discussion to learn more.</p>
 </a>
 
 <br>
 
-<a href="/Final-Project/video-example.html">
+<a href="video-example.html">
 <h3>Top Tutorial Post Name:</h3>
 <p>This section would allow for users to see the beginning of top posts to hopefully inspire them to click on the discussion to learn more.</p>
 </a>
 
 <br>
 
-<a href="/Final-Project/video-example.html">
+<a href="video-example.html">
 <h3>Top Tutorial Post Name:</h3>
 <p>This section would allow for users to see the beginning of top posts to hopefully inspire them to click on the discussion to learn more.</p>
 </a>
 
-<a href="/Final-Project/tutorials.html">
+<a href="tutorials.html">
 <p>More videos...</p>
 </a>
 </div>
@@ -96,29 +96,29 @@
 <br>
 
 <div class="sample">
-<a href="/Final-Project/patterns.html">
+<a href="patterns.html">
 <h2><i>Patterns</i></h2>
 </a>
 
-<a href="/Final-Project/pattern-example.html">
+<a href="pattern-example.html">
 <h3>Top Pattern Post Name:</h3>
 <p>This section would allow for users to see the beginning of top posts to hopefully inspire them to click on the discussion to learn more.</p>
 </a>
 
 <br>
 
-<a href="/Final-Project/pattern-example.html">
+<a href="pattern-example.html">
 <h3>Top Pattern Post Name:</h3>
 <p>This section would allow for users to see the beginning of top posts to hopefully inspire them to click on the discussion to learn more.</p>
 </a>
 
 <br>
 
-<a href="/Final-Project/pattern-example.html">
+<a href="pattern-example.html">
 <h3>Top Pattern Post Name:</h3>
 <p>This section would allow for users to see the beginning of top posts to hopefully inspire them to click on the discussion to learn more.</p>
 </a>
-<a href="/Final-Project/patterns.html">
+<a href="patterns.html">
 <p>More patterns...</p>
 </a>
 </div>
@@ -126,29 +126,29 @@
 <br>
 
 <div class="sample">
-<a href="/Final-Project/forums.html">
+<a href="forums.html">
 <h2><i>Forums</i></h2>
 </a>
 
-<a href="/Final-Project/forum-example.html">
+<a href="forum-example.html">
 <h3>Top Forum Post Name:</h3>
 <p>This section would allow for users to see the beginning of top posts to hopefully inspire them to click on the discussion to learn more.</p>
 </a>
 
 <br>
 
-<a href="/Final-Project/forum-example.html">
+<a href="forum-example.html">
 <h3>Top Forum Post Name:</h3>
 <p>This section would allow for users to see the beginning of top posts to hopefully inspire them to click on the discussion to learn more.</p>
 </a>
 
 <br>
 
-<a href="/Final-Project/forum-example.html">
+<a href="forum-example.html">
 <h3>Top Forum Post Name:</h3>
 <p>This section would allow for users to see the beginning of top posts to hopefully inspire them to click on the discussion to learn more.</p>
 </a>
-<a href="/Final-Project/forums.html">
+<a href="forums.html">
 <p>More forums...</p>
 </a>
 </div>
