--- a/about.html
+++ b/about.html
@@ -3,61 +3,61 @@
 <head>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>Cloth Moth</title>
+	<title>About Us</title>
 	<link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <header class="header">
-    <img src="/Final-Project/images/cloth-moth.jpg">
+    <img src="/images/cloth-moth.jpg">
     <h1 class="Cloth-moth">Cloth Moth</h1>
     </header>
 	<nav>
 	<ul>
 		<li>
             <a href="index.html">
-                <img src="/Final-Project/images/homepage.png" class="icon">
+                <img src="/images/homepage.png" class="icon">
             </a>
             <a href="index.html">Homepage</a>
         </li>
 
 		<li>
             <a href="about.html">
-                <img src="/Final-Project/images/about.png" class="icon">
+                <img src="/images/about.png" class="icon">
             </a>
             <a href="about.html">About</a>
         </li>
 
 		<li>
             <a href="tutorials.html">
-                <img src="/Final-Project/images/tutorials.png" class="icon">
+                <img src="/images/tutorials.png" class="icon">
             </a>
             <a href="tutorials.html">Tutorials</a>
         </li>
 
         <li>
             <a href="patterns.html">
-                <img src="/Final-Project/images/patterns.png" class="icon">
+                <img src="/images/patterns.png" class="icon">
             </a>
             <a href="patterns.html">Patterns</a>
         </li>
 
 		<li>
             <a href="forums.html">
-                <img src="/Final-Project/images/forums.png" class="icon">
+                <img src="/images/forums.png" class="icon">
             </a>
             <a href="forums.html">Forums</a>
         </li>
 
         <li>
             <a href="login.html">
-                <img src="/Final-Project/images/login.png" class="icon">
+                <img src="/images/login.png" class="icon">
             </a>
             <a href="login.html">Log In/Sign Up</a>
         </li>
 
 		<li>
             <a href="contact.html">
-                <img src="/Final-Project/images/contact.png" class="icon">
+                <img src="/images/contact.png" class="icon">
             </a>
             <a href="contact.html">Contact</a>
         </li>
@@ -66,7 +66,7 @@
 
 <div class="About">
 <h2><i>About</i></h2>
-<img src="/Final-Project/images/Katpic1.jpg">
+<img src="/images/Katpic1.jpg">
 <p>Some branches of the fiber art genre are dying slowly. Several crafts are listed as endangered by the HCA, and I wanted to create a community that could connect artists. I believe that communication is key in preventing the extinction of many different kinds of fiber arts. My name is Kat and I made this website to alleviate some of those symptoms by putting artists in contact with one another. That is why I created this website: to create a place for crafters and artists to gather, to keep art forms alive.</p>
 
 <br>
