--- a/pattern-example.html
+++ b/pattern-example.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>Cloth Moth</title>
+	<title>Pattern Example</title>
 	<link rel="stylesheet" href="styles.css">
 </head>
 <body>
@@ -15,49 +15,49 @@
 	<ul>
 		<li>
             <a href="index.html">
-                <img src="/Final-Project/images/homepage.png" class="icon">
+                <img src="/images/homepage.png" class="icon">
             </a>
             <a href="index.html">Homepage</a>
         </li>
 
 		<li>
             <a href="about.html">
-                <img src="/Final-Project/images/about.png" class="icon">
+                <img src="/images/about.png" class="icon">
             </a>
             <a href="about.html">About</a>
         </li>
 
 		<li>
             <a href="tutorials.html">
-                <img src="/Final-Project/images/tutorials.png" class="icon">
+                <img src="/images/tutorials.png" class="icon">
             </a>
             <a href="tutorials.html">Tutorials</a>
         </li>
 
         <li>
             <a href="patterns.html">
-                <img src="/Final-Project/images/patterns.png" class="icon">
+                <img src="/images/patterns.png" class="icon">
             </a>
             <a href="patterns.html">Patterns</a>
         </li>
 
 		<li>
             <a href="forums.html">
-                <img src="/Final-Project/images/forums.png" class="icon">
+                <img src="/images/forums.png" class="icon">
             </a>
             <a href="forums.html">Forums</a>
         </li>
 
         <li>
             <a href="login.html">
-                <img src="/Final-Project/images/login.png" class="icon">
+                <img src="/images/login.png" class="icon">
             </a>
             <a href="login.html">Log In/Sign Up</a>
         </li>
 
 		<li>
             <a href="contact.html">
-                <img src="/Final-Project/images/contact.png" class="icon">
+                <img src="/images/contact.png" class="icon">
             </a>
             <a href="contact.html">Contact</a>
         </li>
@@ -66,14 +66,14 @@
 
 <div class="pattern-example">
 
-<img src="/Final-Project/images/pinsonKatherine_CloudsAndHills.jpg" class="pattern-image">
+<img src="/images/pinsonKatherine_CloudsAndHills.jpg" class="pattern-image">
 <h3>Pattern title</h3>
 <caption>This is the comment the poster makes to go with their pattern. This is what a pattern tutorial page will look like. They can include images and will have a space for comments through this site as well.</caption>
 
 <br>
 
 <button type="button">
-    <img src="/Final-Project/images/like-button.png" class="icon">
+    <img src="/images/like-button.png" class="icon">
 </button>
 
 <form>
@@ -84,7 +84,7 @@
 <br>
 
 <a href="upload-a-pattern.html">
-<img src="/Final-Project/images/add-button.png" class="icon">
+<img src="/images/add-button.png" class="icon">
 <p>Upload your own pattern!</p>
 </a>
 </div>
@@ -93,4 +93,5 @@
 <footer>
 	<p>Made by: Katherine Pinson</p>
 </footer>
+
 </html>
