--- a/patterns.html
+++ b/patterns.html
@@ -3,61 +3,61 @@
 <head>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>Cloth Moth</title>
+	<title>Patterns</title>
 	<link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <header class="header">
-    <img src="/Final-Project/images/cloth-moth.jpg">
+    <img src="/images/cloth-moth.jpg">
     <h1 class="Cloth-moth">Cloth Moth</h1>
     </header>
 	<nav>
 	<ul>
 		<li>
             <a href="index.html">
-                <img src="/Final-Project/images/homepage.png" class="icon">
+                <img src="/images/homepage.png" class="icon">
             </a>
             <a href="index.html">Homepage</a>
         </li>
 
 		<li>
             <a href="about.html">
-                <img src="/Final-Project/images/about.png" class="icon">
+                <img src="/images/about.png" class="icon">
             </a>
             <a href="about.html">About</a>
         </li>
 
 		<li>
             <a href="tutorials.html">
-                <img src="/Final-Project/images/tutorials.png" class="icon">
+                <img src="/images/tutorials.png" class="icon">
             </a>
             <a href="tutorials.html">Tutorials</a>
         </li>
 
         <li>
             <a href="patterns.html">
-                <img src="/Final-Project/images/patterns.png" class="icon">
+                <img src="/images/patterns.png" class="icon">
             </a>
             <a href="patterns.html">Patterns</a>
         </li>
 
 		<li>
             <a href="forums.html">
-                <img src="/Final-Project/images/forums.png" class="icon">
+                <img src="/images/forums.png" class="icon">
             </a>
             <a href="forums.html">Forums</a>
         </li>
 
         <li>
             <a href="login.html">
-                <img src="/Final-Project/images/login.png" class="icon">
+                <img src="/images/login.png" class="icon">
             </a>
             <a href="login.html">Log In/Sign Up</a>
         </li>
 
 		<li>
             <a href="contact.html">
-                <img src="/Final-Project/images/contact.png" class="icon">
+                <img src="/images/contact.png" class="icon">
             </a>
             <a href="contact.html">Contact</a>
         </li>
@@ -66,8 +66,8 @@
 
 <div class="pattern-example">
 <h2><i>Patterns</i></h2>
-<a href="/Final-Project/pattern-example.html">
-<img src="/Final-Project/images/pinsonKatherine_CloudsAndHills.jpg" class="pattern-image">
+<a href="/pattern-example.html">
+<img src="/images/pinsonKatherine_CloudsAndHills.jpg" class="pattern-image">
 
 <h3>Pattern title</h3>
 </a>
@@ -75,8 +75,8 @@
 
 <br>
 
-<a href="/Final-Project/pattern-example.html">
-<img src="/Final-Project/images/pinsonKatherine_oceanTapestrycloseup.png" class="pattern-image">
+<a href="/pattern-example.html">
+<img src="/images/pinsonKatherine_oceanTapestrycloseup.png" class="pattern-image">
 
 <h3>Pattern title</h3>
 </a>
@@ -84,8 +84,8 @@
 
 <br>
 
-<a href="/Final-Project/pattern-example.html">
-<img src="/Final-Project/images/KinderDoll_Hair.jpg" class="pattern-image">
+<a href="/pattern-example.html">
+<img src="/images/KinderDoll_Hair.jpg" class="pattern-image">
 
 <h3>Pattern title</h3>
 </a>
@@ -94,7 +94,7 @@
 <br>
 
 <a href="upload-a-pattern.html">
-<img src="/Final-Project/images/add-button.png" class="icon">
+<img src="/images/add-button.png" class="icon">
 <p>Upload your own pattern!</p>
 </a>
 </div>
@@ -104,3 +104,4 @@
 	<p>Made by: Katherine Pinson</p>
 </footer>
 </html>
+
