--- a/video-example.html
+++ b/video-example.html
@@ -3,61 +3,61 @@
 <head>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>Cloth Moth</title>
+	<title>Video Example</title>
 	<link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <header class="header">
-    <img src="/Final-Project/images/cloth-moth.jpg">
+    <img src="/images/cloth-moth.jpg">
     <h1 class="Cloth-moth">Cloth Moth</h1>
     </header>
 	<nav>
 	<ul>
 		<li>
             <a href="index.html">
-                <img src="/Final-Project/images/homepage.png" class="icon">
+                <img src="/images/homepage.png" class="icon">
             </a>
             <a href="index.html">Homepage</a>
         </li>
 
 		<li>
             <a href="about.html">
-                <img src="/Final-Project/images/about.png" class="icon">
+                <img src="/images/about.png" class="icon">
             </a>
             <a href="about.html">About</a>
         </li>
 
 		<li>
             <a href="tutorials.html">
-                <img src="/Final-Project/images/tutorials.png" class="icon">
+                <img src="/images/tutorials.png" class="icon">
             </a>
             <a href="tutorials.html">Tutorials</a>
         </li>
 
         <li>
             <a href="patterns.html">
-                <img src="/Final-Project/images/patterns.png" class="icon">
+                <img src="/images/patterns.png" class="icon">
             </a>
             <a href="patterns.html">Patterns</a>
         </li>
 
 		<li>
             <a href="forums.html">
-                <img src="/Final-Project/images/forums.png" class="icon">
+                <img src="/images/forums.png" class="icon">
             </a>
             <a href="forums.html">Forums</a>
         </li>
 
         <li>
             <a href="login.html">
-                <img src="/Final-Project/images/login.png" class="icon">
+                <img src="/images/login.png" class="icon">
             </a>
             <a href="login.html">Log In/Sign Up</a>
         </li>
 
 		<li>
             <a href="contact.html">
-                <img src="/Final-Project/images/contact.png" class="icon">
+                <img src="/images/contact.png" class="icon">
             </a>
             <a href="contact.html">Contact</a>
         </li>
@@ -76,7 +76,7 @@ src="https://www.youtube.com/watch?v=fQ89BwlkM2k?controls=1">
 <br>
 
 <button type="button">
-    <img src="/Final-Project/images/like-button.png" class="icon">
+    <img src="/images/like-button.png" class="icon">
 </button>
 
 <form>
@@ -87,7 +87,7 @@ src="https://www.youtube.com/watch?v=fQ89BwlkM2k?controls=1">
 <br>
 
 <a href="upload-a-video.html">
-<img src="/Final-Project/images/add-button.png" class="icon">
+<img src="/images/add-button.png" class="icon">
 <p>Upload your own video!</p>
 </a>
 </div>
