--- a/index.html
+++ b/index.html
@@ -8,55 +8,55 @@
 </head>
 <body>
     <header class="header">
-    <img src="images/cloth-moth.jpg">
+    <img src="https://github.com/KatPinson/KatPinson.github.io/tree/main/images/cloth-moth.jpg">
     <h1 class="Cloth-moth">Cloth Moth</h1>
 		<nav>
 	<ul>
 		<li>
             <a href="index.html">
-                <img src="images/homepage.png" class="icon">
+                <img src="https://github.com/KatPinson/KatPinson.github.io/tree/main/images//homepage.png" class="icon">
             </a>
             <a href="index.html">Homepage</a>
         </li>
 
 		<li>
             <a href="about.html">
-                <img src="images/about.png" class="icon">
+                <img src="https://github.com/KatPinson/KatPinson.github.io/tree/main/images//about.png" class="icon">
             </a>
             <a href="about.html">About</a>
         </li>
 
 		<li>
             <a href="tutorials.html">
-                <img src="images/tutorials.png" class="icon">
+                <img src="https://github.com/KatPinson/KatPinson.github.io/tree/main/images//tutorials.png" class="icon">
             </a>
             <a href="tutorials.html">Tutorials</a>
         </li>
 
         <li>
             <a href="patterns.html">
-                <img src="images/patterns.png" class="icon">
+                <img src="https://github.com/KatPinson/KatPinson.github.io/tree/main/images//patterns.png" class="icon">
             </a>
             <a href="patterns.html">Patterns</a>
         </li>
 
 		<li>
             <a href="forums.html">
-                <img src="images/forums.png" class="icon">
+                <img src="https://github.com/KatPinson/KatPinson.github.io/tree/main/images//forums.png" class="icon">
             </a>
             <a href="forums.html">Forums</a>
         </li>
 
         <li>
             <a href="login.html">
-                <img src="images/login.png" class="icon">
+                <img src="https://github.com/KatPinson/KatPinson.github.io/tree/main/images//login.png" class="icon">
             </a>
             <a href="login.html">Log In/Sign Up</a>
         </li>
 
 		<li>
             <a href="contact.html">
-                <img src="images/contact.png" class="icon">
+                <img src="https://github.com/KatPinson/KatPinson.github.io/tree/main/images//contact.png" class="icon">
             </a>
             <a href="contact.html">Contact</a>
         </li>
