--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <header class="header">
-    <img src="https://clothmoth.art/images/cloth-moth.jpg">
+    <img src="https://clothmoth.art/images/cloth-moth.png">
     <h1 class="Cloth-moth">Cloth Moth</h1>
 		<nav>
 	<ul>
