--- a/contact.html
+++ b/contact.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <header class="header">
-    <img src="/images/cloth-moth.jpg">
+    <img src="/images/cloth-moth.png">
     <h1 class="Cloth-moth">Cloth Moth</h1>
     </header>
 	<nav>
@@ -88,4 +88,5 @@
 	<p>Made by: Katherine Pinson</p>
 </footer>
 </html>
+
 
