--- a/pattern-example.html
+++ b/pattern-example.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <header class="header">
-    <img src="/Final-Project/images/cloth-moth.jpg">
+    <img src="/Final-Project/images/cloth-moth.png">
     <h1 class="Cloth-moth">Cloth Moth</h1>
     </header>
 	<nav>
@@ -95,3 +95,4 @@
 </footer>
 
 </html>
+
