--- a/forum-example.html
+++ b/forum-example.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <header class="header">
-    <img src="/images/cloth-moth.png">
+    <img src="/images/cloth-moth.png" class="icon">
     <h1 class="Cloth-moth">Cloth Moth</h1>
     </header>
 	<nav>
@@ -94,4 +94,5 @@
 </footer>
 
 </html>
+
 
