--- a/tutorials.html
+++ b/tutorials.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <header class="header">
-    <img src="/images/cloth-moth.png">
+    <img src="/images/cloth-moth.png" class="icon">
     <h1 class="Cloth-moth">Cloth Moth</h1>
     </header>
 	<nav>
