--- a/tutorials.html
+++ b/tutorials.html
@@ -68,7 +68,7 @@
 <h2><i>Tutorials</i></h2>
 
 <iframe width="6250%" height="5000%"
-src="https://www.youtube.com/watch?v=fQ89BwlkM2k?controls=1">
+src="https://www.youtube.com/watch?v=fQ89BwlkM2k">
 </iframe>
 
 <a href="/video-example.html">
@@ -79,7 +79,7 @@ src="https://www.youtube.com/watch?v=fQ89BwlkM2k?controls=1">
 <br>
 
 <iframe width="6250%" height="5000%"
-src="https://www.youtube.com/watch?v=0zw5YVe2t6E?controls=1">
+src="https://www.youtube.com/watch?v=0zw5YVe2t6E">
 </iframe>
 
 <a href="/video-example.html">
@@ -90,7 +90,7 @@ src="https://www.youtube.com/watch?v=0zw5YVe2t6E?controls=1">
 <br>
 
 <iframe width="6250%" height="5000%"
-src="https://www.youtube.com/watch?v=cBq3ifTmkBU?controls=1">
+src="https://www.youtube.com/watch?v=cBq3ifTmkBU">
 </iframe>
 
 <a href="/video-example.html">
