--- a/tutorials.html
+++ b/tutorials.html
@@ -67,7 +67,7 @@
 <div class="video-example">
 <h2><i>Tutorials</i></h2>
 
-<iframe width="6250%" height="5000%"
+<iframe width="420" height="315"
 src="https://www.youtube.com/watch?v=fQ89BwlkM2k">
 </iframe>
 
@@ -78,7 +78,7 @@ src="https://www.youtube.com/watch?v=fQ89BwlkM2k">
 
 <br>
 
-<iframe width="6250%" height="5000%"
+<iframe width="420" height="315"
 src="https://www.youtube.com/watch?v=0zw5YVe2t6E">
 </iframe>
 
@@ -89,7 +89,7 @@ src="https://www.youtube.com/watch?v=0zw5YVe2t6E">
 
 <br>
 
-<iframe width="6250%" height="5000%"
+<iframe width="420" height="315"
 src="https://www.youtube.com/watch?v=cBq3ifTmkBU">
 </iframe>
 
