--- a/patterns.html
+++ b/patterns.html
@@ -7,62 +7,62 @@
 	<link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <header class="header">
-    <img src="/images/cloth-moth.png" class="icon">
+   <header class="header">
+    <img src="https://clothmoth.art/images/cloth-moth.png" class="icon">
     <h1 class="Cloth-moth">Cloth Moth</h1>
-    </header>
-	<nav>
+		<nav>
 	<ul>
 		<li>
             <a href="index.html">
-                <img src="/images/homepage.png" class="icon">
+                <img src="https://clothmoth.art/images/homepage.png" class="icon">
             </a>
             <a href="index.html">Homepage</a>
         </li>
 
 		<li>
             <a href="about.html">
-                <img src="/images/about.png" class="icon">
+                <img src="https://clothmoth.art/images/about.png" class="icon">
             </a>
             <a href="about.html">About</a>
         </li>
 
 		<li>
             <a href="tutorials.html">
-                <img src="/images/tutorials.png" class="icon">
+                <img src="https://clothmoth.art/images/tutorials.png" class="icon">
             </a>
             <a href="tutorials.html">Tutorials</a>
         </li>
 
         <li>
             <a href="patterns.html">
-                <img src="/images/patterns.png" class="icon">
+                <img src="https://clothmoth.art/images/patterns.png" class="icon">
             </a>
             <a href="patterns.html">Patterns</a>
         </li>
 
 		<li>
             <a href="forums.html">
-                <img src="/images/forums.png" class="icon">
+                <img src="https://clothmoth.art/images/forums.png" class="icon">
             </a>
             <a href="forums.html">Forums</a>
         </li>
 
         <li>
             <a href="login.html">
-                <img src="/images/login.png" class="icon">
+                <img src="https://clothmoth.art/images/login.png" class="icon">
             </a>
             <a href="login.html">Log In/Sign Up</a>
         </li>
 
 		<li>
             <a href="contact.html">
-                <img src="/images/contact.png" class="icon">
+                <img src="https://clothmoth.art/images/contact.png" class="icon">
             </a>
             <a href="contact.html">Contact</a>
         </li>
 	</ul>
 	</nav>
+    </header>
 
 <div class="pattern-example">
 <h2><i>Patterns</i></h2>
@@ -104,6 +104,7 @@
 	<p>Made by: Katherine Pinson</p>
 </footer>
 </html>
+
 
 
 
