--- a/about.html
+++ b/about.html
@@ -71,7 +71,7 @@
 
 <br>
 
-<p>This website ended up being more of a prototype, as I cannot code everything that I want to fully within the parameters of this class. I don't know other coding languages that I would need to facilitate this or know where I can find a place to store all the files I would receive from users. But I coded the HMTL and CSS end of this project to the best of my ability.</p>
+<p>This website ended up being more of a prototype, as I cannot code everything that I want to fully within the parameters of this class. I don't know other coding languages that I would need to facilitate this or know where I can find a place to store all the files I would receive from users. But I coded the HMTL and CSS end of this project to the best of my ability. Also, the logos were a courtesy of Freepik.</p>
 </div>
 </body>
 
