--- a/about.html
+++ b/about.html
@@ -67,7 +67,7 @@
 <div class="About">
 <h2><i>About</i></h2>
 <img src="/images/Katpic1.jpg">
-<p>Some branches of the fiber art genre are dying slowly. Several crafts are listed as endangered by the HCA, and I wanted to create a community that could connect artists. I believe that communication is key in preventing the extinction of many different kinds of fiber arts. My name is Kat and I made this website to alleviate some of those symptoms by putting artists in contact with one another. That is why I created this website: to create a place for crafters and artists to gather, to keep art forms alive.</p>
+<p class="text">Some branches of the fiber art genre are dying slowly. Several crafts are listed as endangered by the HCA, and I wanted to create a community that could connect artists. I believe that communication is key in preventing the extinction of many different kinds of fiber arts. My name is Kat and I made this website to alleviate some of those symptoms by putting artists in contact with one another. That is why I created this website: to create a place for crafters and artists to gather, to keep art forms alive.</p>
 
 <br>
 
