--- a/forum-example.html
+++ b/forum-example.html
@@ -67,7 +67,7 @@
 <div class="forum-example">
 
 <h3>Forum title</h3>
-<p>This is an example of a type of post people can make if they are logged into their account. This is what a forum page will look like. They can include images and will have a space for comments through this site as well.</p>
+<p class="text">This is an example of a type of post people can make if they are logged into their account. This is what a forum page will look like. They can include images and will have a space for comments through this site as well.</p>
 
 <br>
 
@@ -84,7 +84,7 @@
 
 <a href="upload-a-post.html">
 <img src="/images/add-button.png" class="icon">
-<p>Upload your own post!</p>
+<p class="text">Upload your own post!</p>
 </a>
 </div>
 </body>
@@ -94,6 +94,7 @@
 </footer>
 
 </html>
+
 
 
 
