--- a/forums.html
+++ b/forums.html
@@ -70,27 +70,27 @@
 <a href="/forum-example.html">
 <h3>Forum title</h3>
 </a>
-<p>This will be the preview of forum posts. This is what the forum page will look like. They can include files and will have a space for comments through this site as well. Click on the title to see an example of how the forum page is formatted!</p>
+<p class="text">This will be the preview of forum posts. This is what the forum page will look like. They can include files and will have a space for comments through this site as well. Click on the title to see an example of how the forum page is formatted!</p>
 
 <br>
 
 <a href="/forum-example.html">
 <h3>Forum title</h3>
 </a>
-<p>This will be the preview of forum posts. This is what the forum page will look like. They can include files and will have a space for comments through this site as well. Click on the title to see an example of how the forum page is formatted!</p>
+<p class="text">This will be the preview of forum posts. This is what the forum page will look like. They can include files and will have a space for comments through this site as well. Click on the title to see an example of how the forum page is formatted!</p>
 
 <br>
 
 <a href="/forum-example.html">
 <h3>Forum title</h3>
 </a>
-<p>This will be the preview of forum posts. This is what the forum page will look like. They can include files and will have a space for comments through this site as well. Click on the title to see an example of how the forum page is formatted!</p>
+<p class="text">This will be the preview of forum posts. This is what the forum page will look like. They can include files and will have a space for comments through this site as well. Click on the title to see an example of how the forum page is formatted!</p>
 
 <br>
 
 <a href="upload-a-post.html">
 <img src="/images/add-button.png" class="icon">
-<p>Upload your own post!</p>
+<p class="text">Upload your own post!</p>
 </a>
 </div>
 </body>
@@ -100,6 +100,7 @@
 </footer>
 
 </html>
+
 
 
 
