--- a/index.html
+++ b/index.html
@@ -72,25 +72,25 @@
 
 <a href="video-example.html">
 <h3>Top Tutorial Post Name:</h3>
-<p>This section would allow for users to see the beginning of top posts to hopefully inspire them to click on the discussion to learn more.</p>
+<p class="text">This section would allow for users to see the beginning of top posts to hopefully inspire them to click on the discussion to learn more.</p>
 </a>
 
 <br>
 
 <a href="video-example.html">
 <h3>Top Tutorial Post Name:</h3>
-<p>This section would allow for users to see the beginning of top posts to hopefully inspire them to click on the discussion to learn more.</p>
+<p class="text">This section would allow for users to see the beginning of top posts to hopefully inspire them to click on the discussion to learn more.</p>
 </a>
 
 <br>
 
 <a href="video-example.html">
 <h3>Top Tutorial Post Name:</h3>
-<p>This section would allow for users to see the beginning of top posts to hopefully inspire them to click on the discussion to learn more.</p>
+<p class="text">This section would allow for users to see the beginning of top posts to hopefully inspire them to click on the discussion to learn more.</p>
 </a>
 
 <a href="tutorials.html">
-<p>More videos...</p>
+<p class="text">More videos...</p>
 </a>
 </div>
 
@@ -103,24 +103,24 @@
 
 <a href="pattern-example.html">
 <h3>Top Pattern Post Name:</h3>
-<p>This section would allow for users to see the beginning of top posts to hopefully inspire them to click on the discussion to learn more.</p>
+<p class="text">This section would allow for users to see the beginning of top posts to hopefully inspire them to click on the discussion to learn more.</p>
 </a>
 
 <br>
 
 <a href="pattern-example.html">
 <h3>Top Pattern Post Name:</h3>
-<p>This section would allow for users to see the beginning of top posts to hopefully inspire them to click on the discussion to learn more.</p>
+<p class="text">This section would allow for users to see the beginning of top posts to hopefully inspire them to click on the discussion to learn more.</p>
 </a>
 
 <br>
 
 <a href="pattern-example.html">
 <h3>Top Pattern Post Name:</h3>
-<p>This section would allow for users to see the beginning of top posts to hopefully inspire them to click on the discussion to learn more.</p>
+<p class="text">This section would allow for users to see the beginning of top posts to hopefully inspire them to click on the discussion to learn more.</p>
 </a>
 <a href="patterns.html">
-<p>More patterns...</p>
+<p class="text">More patterns...</p>
 </a>
 </div>
 
@@ -133,24 +133,24 @@
 
 <a href="forum-example.html">
 <h3>Top Forum Post Name:</h3>
-<p>This section would allow for users to see the beginning of top posts to hopefully inspire them to click on the discussion to learn more.</p>
+<p class="text">This section would allow for users to see the beginning of top posts to hopefully inspire them to click on the discussion to learn more.</p>
 </a>
 
 <br>
 
 <a href="forum-example.html">
 <h3>Top Forum Post Name:</h3>
-<p>This section would allow for users to see the beginning of top posts to hopefully inspire them to click on the discussion to learn more.</p>
+<p class="text">This section would allow for users to see the beginning of top posts to hopefully inspire them to click on the discussion to learn more.</p>
 </a>
 
 <br>
 
 <a href="forum-example.html">
 <h3>Top Forum Post Name:</h3>
-<p>This section would allow for users to see the beginning of top posts to hopefully inspire them to click on the discussion to learn more.</p>
+<p class="text">This section would allow for users to see the beginning of top posts to hopefully inspire them to click on the discussion to learn more.</p>
 </a>
 <a href="forums.html">
-<p>More forums...</p>
+<p class="text">More forums...</p>
 </a>
 </div>
 </body>
