--- a/pattern-example.html
+++ b/pattern-example.html
@@ -85,7 +85,7 @@
 
 <a href="upload-a-pattern.html">
 <img src="/images/add-button.png" class="icon">
-<p>Upload your own pattern!</p>
+<p class="text">Upload your own pattern!</p>
 </a>
 </div>
 </body>
@@ -95,6 +95,7 @@
 </footer>
 
 </html>
+
 
 
 
