--- a/patterns.html
+++ b/patterns.html
@@ -95,7 +95,7 @@
 
 <a href="upload-a-pattern.html">
 <img src="/images/add-button.png" class="icon">
-<p>Upload your own pattern!</p>
+<p class="text">Upload your own pattern!</p>
 </a>
 </div>
 </body>
@@ -104,6 +104,7 @@
 	<p>Made by: Katherine Pinson</p>
 </footer>
 </html>
+
 
 
 
