--- a/tutorials.html
+++ b/tutorials.html
@@ -102,7 +102,7 @@ src="https://www.youtube.com/watch?v=cBq3ifTmkBU">
 
 <a href="upload-a-video.html">
 <img src="/images/add-button.png" class="icon">
-<p>Upload your own video!</p>
+<p class="text">Upload your own video!</p>
 </a>
 </div>
 </body>
