--- a/contact.html
+++ b/contact.html
@@ -70,8 +70,8 @@
 <form>
   <label for="email">Email:</label>
   <input type="email" id="email" name="email"><br>
-  <label for="title">Title:</label><br>
-  <input type="text" id="title" name="title">
+  <label for="title">Title:</label>
+  <input type="text" id="title" name="title"><br>
   <label for="reason-for-contact">Add additional information or the reason you're contacting us:</label><br>
   <input type="text" id="reason-for-contact" name="reason-for-contact">
 </form>
@@ -88,6 +88,7 @@
 	<p>Made by: Katherine Pinson</p>
 </footer>
 </html>
+
 
 
 
