--- a/tutorials.html
+++ b/tutorials.html
@@ -66,10 +66,10 @@
 	
 <div class="video-example">
 <h2><i>Tutorials</i></h2>
-
-<iframe width="420" height="315"
-src="https://www.youtube.com/watch?v=fQ89BwlkM2k">
-</iframe>
+	
+<br>
+	
+<iframe width="560" height="315" src="https://www.youtube.com/embed/fQ89BwlkM2k?si=wzLpk-CG2AFCzl6J" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
 
 <a href="/video-example.html">
 <h3>Video title</h3>
@@ -78,9 +78,7 @@ src="https://www.youtube.com/watch?v=fQ89BwlkM2k">
 
 <br>
 
-<iframe width="420" height="315"
-src="https://www.youtube.com/watch?v=0zw5YVe2t6E">
-</iframe>
+<iframe width="560" height="315" src="https://www.youtube.com/embed/0zw5YVe2t6E?si=rv7WLSuL11SZEZ-A" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
 
 <a href="/video-example.html">
 <h3>Video title</h3>
@@ -89,9 +87,7 @@ src="https://www.youtube.com/watch?v=0zw5YVe2t6E">
 
 <br>
 
-<iframe width="420" height="315"
-src="https://www.youtube.com/watch?v=cBq3ifTmkBU">
-</iframe>
+<iframe width="560" height="315" src="https://www.youtube.com/embed/cBq3ifTmkBU?si=NjEYD8j16sPOZ-5y" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
 
 <a href="/video-example.html">
 <h3>Video title</h3>
