--- a/upload-a-pattern.html
+++ b/upload-a-pattern.html
@@ -64,17 +64,18 @@
 	</nav>
     </header>
 
-<div class="upload-a-video">
-<h2><i>Upload your own Video:</i></h2>
-
+<div class="upload-a-pattern">
+<h2><i>Upload your own Pattern:</i></h2>
+<br>
 
 <form>
   <label for="pattern-file">
     <img src="/images/attach-file.png" class="icon">
     Select an image:
 </label>
+	<br>
   <input type="image" id="pattern-file" name="pattern-file"><br>
-  <label for="title">Title:</label><br>
+  <label for="title">Title:</label>
   <input type="text" id="title" name="title">
   <label for="caption">Add your caption!</label><br>
   <input type="text" id="caption" name="caption">
@@ -93,6 +94,7 @@
 	<p>Made by: Katherine Pinson</p>
 </footer>
 </html>
+
 
 
 
