--- a/upload-a-post.html
+++ b/upload-a-post.html
@@ -67,6 +67,7 @@
 <div class="upload-a-post">
 <h2><i>Upload your own Content:</i></h2>
 
+	<br>
 
 <form>
   <label for="forum-file">
@@ -74,7 +75,7 @@
     Select an file:
 </label>
   <input type="image" id="forum-file" name="forum-file"><br>
-  <label for="title">Title:</label><br>
+  <label for="title">Title:</label>
   <input type="text" id="title" name="title">
   <label for="content">Add your post!</label><br>
   <input type="text" id="content" name="content">
@@ -93,6 +94,7 @@
 	<p>Made by: Katherine Pinson</p>
 </footer>
 </html>
+
 
 
 
