--- a/video-example.html
+++ b/video-example.html
@@ -66,9 +66,7 @@
 	
 <div class="video-example">
 
-<iframe width="6250%" height="5000%"
-src="https://www.youtube.com/watch?v=fQ89BwlkM2k?controls=1">
-</iframe>
+<iframe width="560" height="315" src="https://www.youtube.com/embed/fQ89BwlkM2k?si=p_C-QP9sz1o8dykA" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
 
 <h3>Video title</h3>
 <caption>This is the comment the poster makes to go with their video. This is what a video tutorial page will look like. They can include links to YouTube and will have a space for comments through this site as well.</caption>
