--- a/upload-a-pattern.html
+++ b/upload-a-pattern.html
@@ -76,8 +76,8 @@
 	<br>
   <input type="image" id="pattern-file" name="pattern-file"><br>
   <label for="title">Title:</label>
-  <input type="text" id="title" name="title">
-  <label for="caption">Add your caption!</label><br>
+  <input type="text" id="title" name="title"><br>
+  <label for="caption">Add your caption!</label>
   <input type="text" id="caption" name="caption">
 </form>
 
@@ -94,6 +94,7 @@
 	<p>Made by: Katherine Pinson</p>
 </footer>
 </html>
+
 
 
 
