--- a/upload-a-post.html
+++ b/upload-a-post.html
@@ -76,8 +76,8 @@
 </label>
   <input type="image" id="forum-file" name="forum-file"><br>
   <label for="title">Title:</label>
-  <input type="text" id="title" name="title">
-  <label for="content">Add your post!</label><br>
+  <input type="text" id="title" name="title"><br>
+  <label for="content">Add your post!</label>
   <input type="text" id="content" name="content">
 </form>
 
@@ -94,6 +94,7 @@
 	<p>Made by: Katherine Pinson</p>
 </footer>
 </html>
+
 
 
 
